# rag-evidence-attack-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: run_context_robustness_eval.py  run_evidence_attack_eval.py  run_part2_eval.py  run_results_report.py
src/rag_eval_lab/: __init__.py  attack.py  data.py  metrics.py  pipeline.py  qa.py  reporting.py
tests/: test_attack.py  test_context_pipeline.py  test_data.py  test_imports.py  test_metrics.py  test_pipeline.py  test_qa.py  test_reporting.py
