[project]
name = "rag-evidence-attack-lab"
version = "0.1.0"
description = "Scientific QA robustness evaluation under evidence perturbation"
requires-python = ">=3.9"
dependencies = [
  "openai",
  "python-dotenv",
  "pandas",
  "numpy",
  "tqdm",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

